[tool.poetry]
name = "PriceCalculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
missingno = "^0.5.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
Unidecode = "^1.3.6"
PyYAML = "^6.0"
networkx = "^3.1"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
