[tool.poetry]
name = "real_state_price_calculator_pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
hyperopt = "^0.2.7"
hydra-core = "^1.3.2"
missingno = "^0.5.2"
seaborn = "^0.12.2"
Unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
